t/test-data/Models/bad/DefaultCalcOnEnum.nhd
*** general ***

author   = Agrammon Group
date     = 2024-01-01
taxonomy = DefaultCalcOnEnum

+short

  Multi-option enum (SelectBox) whose default_calc diverges from
  default_gui (calc falls back to option_a while the GUI pre-selects
  option_b). This must be rejected by the model sanity check.

*** input ***

+category
  type = enum
  default_calc = option_a
  default_gui  = option_b
  ++enum
    +++option_a
       en = Option A
       de = Option A
       fr = Option A
    +++option_b
       en = Option B
       de = Option B
       fr = Option B
  ++labels
    en = Category
    de = Kategorie
    fr = Catégorie
  ++units
    en = -

*** output ***

+result
  print = 7
  ++units
    en = -
  ++formula
    In(category) eq 'option_a' ? 1 : 2
  ++description
    Final result
